fixed text overflow at higher resolutions

--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@
     cursor: default;
     user-select: none;
     font-family: 'Lato', sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
 body {
@@ -21,6 +23,7 @@ body {
     background-attachment: fixed;
     min-height: 100vh;
     position: relative;
+    overflow: hidden;
 }
 
 /* HEADER */
@@ -73,19 +76,41 @@ main {
     background-color: var(--main-background-color);
     padding: 100px;
     font-size: 20px;
+    max-height: 55vh;
+    overflow-y: auto;
 }
 
 /* HOME PAGE */
+.home {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5rem;
+}
+
+.home-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 4rem;
+}
+
 .home p {
     text-align: justify;
     text-justify: distribute;
     font-style: italic;
 }
 
+.home-text {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    max-width: 30rem;
+}
+
 .home img {
     height: 350px;
-    float: right;
-    margin-left: 50px;
     border-radius: 8px;
     pointer-events: none;
 }
@@ -134,6 +159,7 @@ main {
     flex-direction: column;
     align-items: center;
     transition: 100ms;
+    overflow-y: hidden;
 }
 
 .about-info {
